# syncabull

./: .example.dev.env  .example.env  .gitignore  Caddyfile  Cargo.toml  Dockerfile.api  Dockerfile.api.dev  Dockerfile.client  Dockerfile.client.dev  LICENSE  Makefile  README.md  cargo.toml  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker.yml  nightly.yml  release.yml
api/: Cargo.toml  Dockerfile  Dockerfile.dev
api/migrations/2022-05-18-010519_create_users/: down.sql  up.sql
api/migrations/2022-10-30-230537_init/: down.sql  up.sql
api/src/: auth.rs  database.rs  db_types.rs  json_templates.rs  main.rs  photoscanner.rs  schema.rs  webserver.rs
api/www/dynamic/: cookie.handlebars  success.handlebars
app/: Dockerfile  Dockerfile.dev  README.md  nuxt.config.js  package.json  tsconfig.json
app/components/: FloatingBoxes.vue  Footer.vue  LoginButton.vue  Nav.vue
app/pages/: dashboard.vue  index.vue  login.vue  success.vue
client/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
client/migrations/2022-10-30-025218_init/: down.sql  up.sql
client/src/: config.rs  database.rs  json_templates.rs  lib.rs  main.rs  media.rs  schema.rs
shared-libs/: Cargo.toml
shared-libs/src/: json_templates.rs  lib.rs
src/: main.rs  photoscanner.rs
