[package]
name = "syncabull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.2.0"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.2", features = ["multipart", "tls"] }
futures = "0.3.21"
reqwest = { version = "0.11.10", features = ["json", "serde_json", "tokio-util"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
rand = "0.8.5"
sha2 = "0.10.2"
handlebars = "4.2.2"
async-trait = "0.1.53"
base64 = "0.13.0"

[[bin]]
name = "app"
path = "src/main.rs"