[package]
name = "syncabull"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Bull"]
description = "Syncabull is a tool for keeping a local backup of Google Photos"
repository = "https://github.com/JosiahBull/syncabull"
license = "MIT"
readme = "README.md"
keywords = ["google", "photos", "backup"]
categories = ["command-line-utilities"]
documentation = "https://github.com/JosiahBull/syncabull"

[[bin]]
bench = false
path = "src/main.rs"
name="syncabull"

[lib]
bench = false
path = "src/lib.rs"
name = "syncabull_lib"

[dependencies]
# API Communication
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }
base64 = "0.13.1"
tempfile = "3.3.0"

# Configuration
# static_assertions = "1.1.0"
toml = "0.5.9"

# User Interaction
log = "0.4.17"
pretty_env_logger = { git = "https://github.com/JosiahBull/reduced-pretty-env-logger" }

[build-dependencies]
clap = "3.2.23"
clap_complete = "3.2.5"
