[package]
name = "syncabull"
version = "0.1.0"
edition = "2021"
authors = ["Josiah Bull"]
description = "Syncabull is a tool for keeping a local backup of Google Photos"
repository = "https://github.com/JosiahBull/syncabull"
license = "MIT"
readme = "README.md"
keywords = ["google", "photos", "backup"]
categories = ["command-line-utilities"]
documentation = "https://github.com/JosiahBull/syncabull"

[[bin]]
bench = false
path = "src/main.rs"
name="syncabull"

[lib]
bench = false
path = "src/lib.rs"
name = "syncabull_lib"

[dependencies]
# API Communication
shared-libs = { path="../shared-libs" }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
ureq = { version = "2.5.0", features = ["json"] }
base64 = "0.13.1"
tempfile = "3.3.0"

# User Interaction
log = "0.4.17"
pretty_env_logger = { git = "https://github.com/JosiahBull/reduced-pretty-env-logger" }

# Database
# TODO: set this up to only use sqlite in debug mode
diesel = { version = "2.0.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.0.0", default-features = false, features = ["sqlite"] }

[build-dependencies]
clap = "3.2.23"
clap_complete = "3.2.5"
